--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^2.9.0",
     "less": "^4.2.0",
     "less-loader": "^12.1.0",
     "mathjs": "^3.16.5",
@@ -19,6 +20,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "unplugin-auto-import": "^0.18.6",
+    "unplugin-vue-components": "^0.27.5",
     "vite": "^5.0.10"
   }
 }
